# solid-octo-train

./: .env.example  .gitignore  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
data/: ground_truth_generator.py  prod_sample_urls.json  seed_urls.json
eval/: judge_cache.json  llm_judge.py  metrics.py  run_eval.py
eval/results/: leaderboard.json
